# AiTrans

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  framework_design_standard.md  main.py  mapping_registry.json  pyproject.toml  pyrightconfig.json  reducibility_standard.md  shelf_framework.py  shelf_framework_standard.md  specify_cli常用命令.md  standards_tree.md  traceability_standard.md  如何开始.md
.codex/: auth.json  config.toml  state_5.sqlite-shm  state_5.sqlite-wal  version.json
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
apps/: __init__.py
docs/: architecture.md  assumptions.md  examples.md  full_rewrite_exec_plan.md  github-launch-kit.md  governance_tree_validation_plan.md  interactive_viewer.md  math_model.md  project_discovery_audit.md  repo-rename-checklist.md  shelf方案总览与简化评估.md  slides_outline.md  teaching_notes.md  type_count_explained.md  type_gallery.md  type_gallery_3d.md  type_grouping.md  全链实现框架与跳转逻辑详解.md  四层重构实施说明.md  数学公式与分型计数详解.md  最终架构重构验收标准.md  框架到代码映射与反查覆盖说明.md  知识库工作台链路对齐说明.md  给其它AI的Shelf仓库全景说明.md
mapping/: mapping_registry.json
projects/: README.md
scripts/: build_shelf_ai_plugin_presentation.py  configure_branch_protection.sh  generate_evidence_tree_hierarchy.py  generate_framework_tree_hierarchy.py  generate_governance_tree_hierarchy.py  generate_module_hierarchy_html.py  generate_shelf_projection_validation_report.py  generate_shelf_validation_report.py  generate_spec_frontend_hierarchy.py  install_git_hooks.sh  materialize_project.py  sync_mapping_registry.py  validate_canonical.py  (+1 more)
specs/: 可追溯性标准.md  (+3 more)
(+498 files in other folders)
